--- a/package.json
+++ b/package.json
@@ -12,8 +12,16 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@firebase/auth": "^1.4.0",
     "@fontsource/roboto": "^5.0.8",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.4",
+    "firebase": "^10.6.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
+    "nodemon": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.19.0"
