--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@firebase/auth": "^1.4.0",
     "@fontsource/roboto": "^5.0.8",
+    "@react-spring/types": "^9.7.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
@@ -21,9 +22,12 @@
     "firebase": "^10.6.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
-    "nodemon": "^3.0.1",
+    "nodemon": "^3.0.2",
     "react": "^18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.19.0"
+    "react-router-dom": "^6.19.0",
+    "react-spring": "^9.7.3"
   }
 }
