--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@firebase/auth": "^1.4.0",
     "@fontsource/roboto": "^5.0.8",
+    "@mui/material": "^5.14.20",
     "@react-spring/types": "^9.7.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
